src/objects/Journal_Voucher_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>Add_To_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add To Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_To_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add To PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_FundAccSystem__c</fullName>
        <label>Item FundAccSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Fund_GL__c</fullName>
        <label>Item Fund GL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Intake_Method__c</fullName>
        <label>Item Intake Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Payment_Method__c</fullName>
        <label>Item Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Transaction_Code__c</fullName>
        <label>Item Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Transaction_Type__c</fullName>
        <label>Item Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JV_name__c</fullName>
        <label>JV name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Voucher_mtd__c</fullName>
        <label>Journal Voucher mtd</label>
        <referenceTo>Journal_Voucher_meta__mdt</referenceTo>
        <relationshipLabel>Journal Voucher Filters</relationshipLabel>
        <relationshipName>Journal_Voucher_Filters</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Journal Voucher Filter</label>
    <pluralLabel>Journal Voucher Filters</pluralLabel>
</CustomObject>